GNOME Bugzilla – Bug 776485
GDK W32: Impossible to restore maximized window via system menu
Last modified: 2017-01-09 14:18:45 UTC
How to reproduce: * Maximize a window * Right-click on the titlebar (or use some other way of calling the system menu) Expected result: * System menu is shown with the "restore" item being available Actual result: * System menu is shown with the "restore" item being grayed out
Created attachment 342466 [details] [review] GDK W32: Change WM_SYSMENU style switch logic Instead of checking for window state and giving it extra styles that fit, just give it all styles that it is missing. It turned out that otherwise it is impossible to, for example, restore a maximized window via sysmenu. Also, be more flexible towards GDK/WM window state mismatches and consider the window minimized/maximized if *either* GDK or WM thinks so.
Review of attachment 342466 [details] [review]: If you tested go for it. Seems fair to me
Attachment 342466 [details] pushed as 3326fba - GDK W32: Change WM_SYSMENU style switch logic